--- a/src/app/pages/clientes/navbar/navbar.component.html
+++ b/src/app/pages/clientes/navbar/navbar.component.html
@@ -12,23 +12,28 @@
                 </div>
                 <div class="col-lg-4">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item mx-auto">
+                        <li *ngIf="!authService.estaAutenticado()" class="nav-item mx-auto">
                             <a class="nav-link active" aria-current="page" href="#">Iniciar Sesión</a>
                         </li>
-                        <!--li class="nav-item dropdown">
+                        <li *ngIf="authService.estaAutenticado()" class="nav-item">
+                            <a class="nav-link" aria-current="page" [routerLink]="['/carrito']">
+                                Carrito
+                            </a>
+                        </li>
+                        <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
-                                Dropdown
+                                {{authService.usuario.nombres}}
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                                <li><a class="dropdown-item" href="#">Mi perfil</a></li>
+                                <li><a class="dropdown-item" href="#">Mis pedidos</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li><a class="dropdown-item" (click)="cerrarSesion()">Cerrar Sesión</a></li>
                             </ul>
-                        </li-->
+                        </li>
                     </ul>
                 </div>
             </div>
