--- a/src/app/pages/clientes/navbar/navbar.component.html
+++ b/src/app/pages/clientes/navbar/navbar.component.html
@@ -8,19 +8,19 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div class="row w-100 mx-auto">
                 <div class="col-lg-8">
-                    <input type="text" class="form-control rounded-pill search" placeholder="¿Qué estás buscando?" />
+                    <input type="text" class="form-control rounded-pill search mt-1" placeholder="¿Qué estás buscando?" />
                 </div>
                 <div class="col-lg-4">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li *ngIf="!authService.estaAutenticado()" class="nav-item mx-auto">
-                            <a class="nav-link active" aria-current="page" href="#">Iniciar Sesión</a>
+                            <a class="nav-link active mt-1" aria-current="page" [routerLink]="['/login']">Iniciar Sesión</a>
                         </li>
                         <li *ngIf="authService.estaAutenticado()" class="nav-item">
                             <a class="nav-link" aria-current="page" [routerLink]="['/carrito']">
                                 Carrito
                             </a>
                         </li>
-                        <li class="nav-item dropdown">
+                        <li *ngIf="authService.estaAutenticado()" class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 {{authService.usuario.nombres}}
@@ -31,7 +31,7 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" (click)="cerrarSesion()">Cerrar Sesión</a></li>
+                                <li><a class="dropdown-item btn-cerrar-sesion" (click)="cerrarSesion()">Cerrar Sesión</a></li>
                             </ul>
                         </li>
                     </ul>
