--- a/src/app/pages/clientes/navbar/navbar.component.css
+++ b/src/app/pages/clientes/navbar/navbar.component.css
@@ -1,3 +1,23 @@
 .btn-cerrar-sesion{
     cursor: pointer;
 }
+
+.link-categoria {
+    text-decoration: none;
+    background-image: linear-gradient(currentColor, currentColor);
+    background-position: 0% 100%;
+    background-repeat: no-repeat;
+    background-size: 0% 2px;
+    transition: background-size .3s;
+}
+
+.link-categoria:hover, .link-categoria:focus {
+    background-size: 100% 2px;
+    cursor: pointer;
+}
+
+@media (max-width: 767.98px) {
+    .navbar-brand {
+        font-size: 15px;
+    }
+}
