--- a/src/app/pages/clientes/navbar/navbar.component.html
+++ b/src/app/pages/clientes/navbar/navbar.component.html
@@ -8,12 +8,14 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div class="row w-100 mx-auto">
                 <div class="col-lg-8">
-                    <input type="text" class="form-control rounded-pill search mt-1" placeholder="¿Qué estás buscando?" />
+                    <input type="text" class="form-control rounded-pill search mt-1"
+                        placeholder="¿Qué estás buscando?" />
                 </div>
                 <div class="col-lg-4">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li *ngIf="!authService.estaAutenticado()" class="nav-item mx-auto">
-                            <a class="nav-link active mt-1" aria-current="page" [routerLink]="['/login']">Iniciar Sesión</a>
+                            <a class="nav-link active mt-1" aria-current="page" [routerLink]="['/login']">Iniciar
+                                Sesión</a>
                         </li>
                         <li *ngIf="authService.estaAutenticado()" class="nav-item">
                             <a class="nav-link" aria-current="page" [routerLink]="['/carrito']">
@@ -31,7 +33,8 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item btn-cerrar-sesion" (click)="cerrarSesion()">Cerrar Sesión</a></li>
+                                <li><a class="dropdown-item btn-cerrar-sesion" (click)="cerrarSesion()">Cerrar
+                                        Sesión</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -40,3 +43,30 @@
         </div>
     </div>
 </nav>
+<ul class="nav justify-content-center bg-dark p-2">
+    <li class="nav-item">
+        <a class="link-categoria nav-link active text-light" [routerLink]="['/demografia/kodomo']">
+            Kodomo
+        </a>
+    </li>
+    <li class="nav-item">
+        <a class="link-categoria nav-link active text-light" [routerLink]="['/demografia/shonen']">
+            Shōnen
+        </a>
+    </li>
+    <li class="nav-item">
+        <a class="link-categoria nav-link active text-light" [routerLink]="['/demografia/shojo']">
+            Shōjo
+        </a>
+    </li>
+    <li class="nav-item">
+        <a class="link-categoria nav-link active text-light" [routerLink]="['/demografia/seinen']">
+            Seinen
+        </a>
+    </li>
+    <li class="nav-item">
+        <a class="link-categoria nav-link active text-light" [routerLink]="['/demografia/josei']">
+            Josei
+        </a>
+    </li>
+</ul>
