--- a/src/app/pages/clientes/volumenes/volumenes.component.html
+++ b/src/app/pages/clientes/volumenes/volumenes.component.html
@@ -22,7 +22,7 @@
             <div *ngFor="let volumen of volumenes" class="col-sm-3 mt-3">
                 <div class="card mb-3 shadow rounded">
                     <div class="card-body">
-                        <a class="link-producto" [routerLink]="['/volumen',volumen.id_volumen]">
+                        <a class="link-producto" [routerLink]="['/catalogo/volumen',volumen.url]">
                             <div class="container-foto mt-2 mb-3">
                                 <img src="http://localhost:9898/api/volumen/foto/{{volumen.id_volumen}}"
                                     alt="{{volumen.nombre_volumen}}" class="img-fluid">
