Modificando home y navbar

--- a/src/app/pages/clientes/home/home.component.html
+++ b/src/app/pages/clientes/home/home.component.html
@@ -1,2 +1,32 @@
 <app-navbar></app-navbar>
+<section class="info-cards py-4">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <div data-aos="zoom-in" class="card mb-3 shadow rounded">
+                    <div class="card-body">
+                        <h5 class="fw-bold">Envíos a todo el Perú</h5>
+                        <p>Nuestros pedidos serán entregados mediante Olva Courrier.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div data-aos="zoom-in" class="card mb-3 shadow rounded">
+                    <div class="card-body">
+                        <h5 class="fw-bold">Métodos de pago seguros</h5>
+                        <p>Métodos 100% seguros con opción de reclamo.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div data-aos="zoom-in" class="card mb-3 shadow rounded">
+                    <div class="card-body">
+                        <h5 class="fw-bold">Atención al cliente 24h</h5>
+                        <p>Servicio en línea al cliente vigente todo el día.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 <app-footer></app-footer>
