Metodo para registrar - falta validaciones

--- a/src/app/pages/clientes/navbar/navbar.component.html
+++ b/src/app/pages/clientes/navbar/navbar.component.html
@@ -70,3 +70,8 @@
         </a>
     </li>
 </ul>
+<ul class="nav justify-content-center bg-success">
+    <li class="nav-item">
+        <p class="text-white mb-1 mt-1">Envío gratis en compras desde <span class="fw-bold">S/.300.00</span></p>
+    </li>
+</ul>
