Modificando navbar y creando vista carrito

--- a/src/app/pages/clientes/home/home.component.html
+++ b/src/app/pages/clientes/home/home.component.html
@@ -1,4 +1,5 @@
 <app-navbar></app-navbar>
+<app-barra-demografias></app-barra-demografias>
 <section class="info-cards py-4">
     <div class="container">
         <div class="row">
