--- a/src/app/pages/clientes/demografias/demografias.component.html
+++ b/src/app/pages/clientes/demografias/demografias.component.html
@@ -1,4 +1,5 @@
 <app-navbar></app-navbar>
+<app-barra-demografias></app-barra-demografias>
 <div class="container p-5">
     <div class="row">
         <div class="col-lg-3">
