--- a/src/app/pages/clientes/volumen/volumen.component.html
+++ b/src/app/pages/clientes/volumen/volumen.component.html
@@ -1,4 +1,5 @@
 <app-navbar></app-navbar>
+<app-barra-demografias></app-barra-demografias>
 <div *ngIf="volumen" class="container p-5">
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
