--- a/src/app/pages/clientes/volumenes/volumenes.component.html
+++ b/src/app/pages/clientes/volumenes/volumenes.component.html
@@ -1,4 +1,5 @@
 <app-navbar></app-navbar>
+<app-barra-demografias></app-barra-demografias>
 <div class="container p-5">
     <div class="row">
         <div *ngIf="manga" class="col-lg-12">
