--- a/src/app/pages/clientes/volumen/volumen.component.html
+++ b/src/app/pages/clientes/volumen/volumen.component.html
@@ -27,8 +27,8 @@
                 <hr />
                 <p>{{volumen.descripcion}}</p>
                 <hr />
-                <button *ngIf="volumen.stock_act > volumen.stock_min" (click)="agregarMangaCarrito(volumen)" class="btn btn-success">
-                    Agregar alcarrito
+                <button *ngIf="volumen.stock_act > volumen.stock_min && authService.estaAutenticado()" (click)="agregarMangaCarrito(volumen)" class="btn btn-success">
+                    Agregar al carrito
                 </button>
                 <span *ngIf="volumen.stock_act < volumen.stock_min" class="text-danger fw-bold text-agotado">Producto
                     agotado</span>
