Agregando Dashboard para administrador

--- a/src/app/pages/admin/dashboard/dashboard.component.html
+++ b/src/app/pages/admin/dashboard/dashboard.component.html
@@ -1,1 +1,6 @@
-<p>dashboard works!</p>
+<div class="main-container d-flex">
+    <app-sidebar class="sidenav"></app-sidebar>
+    <div class="content">
+
+    </div>
+</div>
