modificaciones al diseño para mostrar géneros

--- a/src/app/pages/clientes/footer/footer.component.html
+++ b/src/app/pages/clientes/footer/footer.component.html
@@ -6,7 +6,7 @@
                     <div class="footer-logo">
                         <h3 class="mt-4 fw-bold">Mangastore</h3>
                     </div>
-                    <p>Estamos dispuestos a brindar nuestro mejor servicio, por el bienestar de todos</p>
+                    <p>Estamos dispuestos a brindar nuestro mejor servicio, por el bienestar de todos.</p>
                 </div>
             </div>
             <div class="col-lg-2">
@@ -48,7 +48,7 @@
     <div class="footer-bottom text-center py-3 bg-dark">
         <div class="container">
             <p class="mb-0 text-light">
-                Copyright &copy; 2022 漫画 Mangastore. Todos los derechos reservados.
+                Copyright &copy; 2023 漫画 Mangastore. Todos los derechos reservados.
             </p>
         </div>
     </div>
