--- a/src/app/pages/clientes/carrito/carrito.component.html
+++ b/src/app/pages/clientes/carrito/carrito.component.html
@@ -37,11 +37,16 @@
             </table>
         </div>
         <div class="col-lg-3 p-4">
-            <div class="text-center">
+            <div class="text-center" *ngIf="carrito.length > 0">
                 <button class="btn btn-danger mb-2" (click)="carritoService.limpiarCarrito()">Limpiar carrito</button>
             </div>
-            <div class="text-center">
+            <div class="text-center" *ngIf="carrito.length > 0">
                 <a class="btn btn-warning mb-3" [routerLink]="['/home']">Seguir comprando</a>
+            </div>
+            <div class="text-center" *ngIf="carrito.length == 0">
+                <p>
+                    El carrito está vacío, por qué no revisas nuestro <a [routerLink]="['/home']">catálogo</a>?
+                </p>
             </div>
             <div class="card">
                 <div class="card-header">
@@ -58,6 +63,6 @@
             </div>
         </div>
     </div>
-    <button class="ms-auto btn btn-success">Pagar ahora</button>
+    <button class="ms-auto btn btn-success" *ngIf="carrito.length > 0">Pagar ahora</button>
 </div>
 <app-footer></app-footer>
