--- a/src/app/pages/clientes/demografias/demografias.component.html
+++ b/src/app/pages/clientes/demografias/demografias.component.html
@@ -30,8 +30,9 @@
                 </select>
             </div>
         </div>
+        <p class="mt-3 text-muted">{{descripcion}}</p>
     </div>
-    <div class="container mt-5 mb-3">
+    <div class="container mt-3 mb-3">
         <div class="row">
             <div *ngFor="let manga of mangas" class="col-sm-3">
                 <div class="card mb-3 shadow rounded">
